complete Header html code

--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <title>Blog Page ✔</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="menu">
+          <h2 class="menu_title">📘 THE CODE MAGAZINE</h2>
+          <ul class="menu_items">
+            <li class="menu_item">Blog</li>
+            <li class="menu_item">Chalenges</li>
+            <li class="menu_item">FlexBox</li>
+            <li class="menu_item">CSS Grid</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
