header coding end

--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
         <nav class="menu">
           <h2 class="menu_title">📘 THE CODE MAGAZINE</h2>
           <ul class="menu_items">
-            <li class="menu_item">Blog</li>
-            <li class="menu_item">Chalenges</li>
-            <li class="menu_item">FlexBox</li>
-            <li class="menu_item">CSS Grid</li>
+            <li>
+              <a href="#" class="menu_item">Blog</a>
+            </li>
+            <li>
+              <a href="#" class="menu_item">Chalenges</a>
+            </li>
+            <li>
+              <a href="#" class="menu_item">FlexBox</a>
+            </li>
+            <li>
+              <a href="#" class="menu_item">CSS Grid</a>
+            </li>
           </ul>
         </nav>
       </div>
