--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <nav class="menu">
           <h2 class="menu_title">📘 THE CODE MAGAZINE</h2>
           <ul class="menu_items">
-            <li>
+            <li class="item">
               <a href="#" class="menu_item">Blog</a>
             </li>
-            <li>
+            <li class="item">
               <a href="#" class="menu_item">Chalenges</a>
             </li>
-            <li>
+            <li class="item">
               <a href="#" class="menu_item">FlexBox</a>
             </li>
-            <li>
+            <li class="item">
               <a href="#" class="menu_item">CSS Grid</a>
             </li>
           </ul>
