codding post section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header class="header">
+      <!-- for box modell -->
       <div class="container">
         <nav class="menu">
           <h2 class="menu_title">📘 THE CODE MAGAZINE</h2>
@@ -28,5 +29,36 @@
         </nav>
       </div>
     </header>
+
+    <main class="main">
+      <div class="container">
+        <article>
+          <h1 class="main_title">The Basic Language of the Web: HTML</h1>
+          <div class="author">
+            <img
+              src="./images/laura-jones.jpg"
+              alt="author photo"
+              class="author_img"
+            />
+            <p class="author_info">
+              Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+            </p>
+          </div>
+          <img src="./images/post-img.jpg" alt="code_img" class="post_img" />
+          <p class="post_caption">
+            All modern websites and web applications are built using three
+            fundamental <br />
+            technologies: HTML, CSS and JavaScript. These are the languages of
+            the web.
+          </p>
+          <br />
+          <p class="post_caption">
+            In this post, let's focus on HTML. We will learn what HTML is all
+            about, and why you <br />
+            too should learn it.
+          </p>
+        </article>
+      </div>
+    </main>
   </body>
 </html>
