--- a/index.html
+++ b/index.html
@@ -97,6 +97,33 @@
               >
             </p>
           </section>
+          <section class="learn_html">
+            <h3 class="html_learn_title">Why should you learn HTML?</h3>
+            <p class="html_learn_caption">
+              There are countless reasons for learning the fundamental language
+              of the web. Here <br />
+              are 5 of them:
+            </p>
+            <br />
+            <ul class="html_learn_part">
+              <strong
+                ><li>
+                  To be able to use the fundamental web dev language
+                </li></strong
+              >
+              <li>
+                To hand-craft beautiful websites instead of relying on tools
+                like Worpress or Wix
+              </li>
+              <li>To build web applications</li>
+              <li>To impress friends</li>
+              <li>To have fun 😃</li>
+            </ul>
+            <br />
+            <p class="html_learn_caption">
+              Hopefully you learned something new here. See you next time!
+            </p>
+          </section>
         </article>
       </div>
     </main>
