--- a/index.html
+++ b/index.html
@@ -125,6 +125,61 @@
             </p>
           </section>
         </article>
+        <aside>
+          <h3 class="aside_title">Related posts</h3>
+          <ul class="aside_list">
+            <li class="aside_list_item">
+              <img
+                src="./images/related-1.jpg"
+                alt="codding"
+                class="aside_list_img"
+              />
+              <div class="aside_txt">
+                <a href="#">
+                  How to Learn <br />
+                  Web <br />
+                  Development</a
+                >
+                <p class="aside_description">
+                  By Jonas <br />
+                  Schmedtmann
+                </p>
+              </div>
+            </li>
+
+            <li class="aside_list_item">
+              <img
+                src="./images/related-2.jpg"
+                alt="raad_barq😂"
+                class="aside_list_img"
+              />
+              <div class="aside_txt">
+                <a href="#"
+                  >The Unknown <br />
+                  Powers of CSS</a
+                >
+                <p class="aside_description">By Jim Dilion</p>
+              </div>
+            </li>
+
+            <li class="aside_list_item">
+              <img
+                src="./images/related-3.jpg"
+                alt="code"
+                class="aside_list_img"
+              />
+              <div class="aside_txt">
+                <a href="#"
+                  >Why <br />
+                  JavaScript is <br />
+                  Awesome</a
+                >
+                <br />
+                <p class="aside_description">By Matilda</p>
+              </div>
+            </li>
+          </ul>
+        </aside>
       </div>
     </main>
   </body>
