--- a/index.html
+++ b/index.html
@@ -182,5 +182,11 @@
         </aside>
       </div>
     </main>
+
+    <footer>
+      <div class="container">
+        <p class="footer_txt">Copyright © 2027 by The Code Magazine.</p>
+      </div>
+    </footer>
   </body>
 </html>
